fix #13 - component overflow

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,10 @@
   /* padding: 2rem; */
   text-align: center;
 }
+
+/* Debug - layout view */
+/* 
+* {
+  outline: 1px solid red; 
+} 
+*/
